npm install @fontsource-variable/outfit, import font and include in the styles of :root

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   --clr-secondary-400: hsla(229, 78%, 60%, 1);
 
   /* font family */
-  --ff-base: "Outfit", sans-serif;
+  --ff-base: "Outfit Variable", sans-serif;
 
   /* font weights */
   --fw-regular: 300;
