--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@
 html {
   color-scheme: dark;
 }
+
+body {
+  color: var(--clr-neutral-100);
+  font-family: var(--ff-base);
+  font-size: var(--fs-400);
+  font-weight: var(--fw-regular);
+  line-height: 1.5;
+}
