add basic reset for img and svg elements as well as pictures and videos. These resets make these elements easier to work with. Practically speaking we would only need the reset for img elemennts because this project will be kept simple. However, for future sake, we add in the other elements as well

--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
   margin: 0;
 }
 
+img,
+svg,
+picture,
+video {
+  max-width: 100%;
+  display: block;
+}
+
 :root {
   /* colors */
   --clr-neutral-100: hsla(0, 0%, 100%, 1);
