--- a/style.css
+++ b/style.css
@@ -57,3 +57,13 @@ body {
   font-weight: var(--fw-regular);
   line-height: 1.5;
 }
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: insert(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
