--- a/style.css
+++ b/style.css
@@ -68,3 +68,17 @@ body {
   white-space: nowrap;
   width: 1px;
 }
+
+.main-grid {
+  display: grid;
+  grid-template-columns: 15rem auto;
+  grid-auto-flow: dense;
+}
+
+main {
+  grid-column: 2;
+}
+
+aside {
+  grid-column: 1;
+}
