our goal is to create new markers for each item in the list of skills and have a vertial line that passes through all of them. There are multiple ways to do this, so as a first attempt we try to make it happen by using the border property

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main {
 
 aside {
   grid-column: 1;
+  align-self: stretch;
 }
 
 .job-experience {
@@ -95,6 +96,10 @@ aside {
 }
 
 .icon-list {
+  height: 100%;
+  border-left: 1px solid orange;
+  margin-left: 10px;
+
   list-style: none;
   display: grid;
   gap: 3rem;
