use the pseudo element ::after for dots. For now, the dots will show up at the buttom left of each icon. Insert positions as shown here so that we can fix their positioning with the next commit

--- a/style.css
+++ b/style.css
@@ -113,5 +113,17 @@ aside {
 }
 
 .icon-list > li {
+  position: relative;
   padding-left: 3rem;
+}
+
+.icon-list > li::after {
+  content: "";
+  position: absolute;
+
+  /* specify width and then use aspect-ratio to declare the relationship between width and height
+  By doing this, we are saying that there is a 1 to 1 ratio between width and height*/
+  width: 0.5rem;
+  aspect-ratio: 1;
+  background: var(--clr-neutral-100);
 }
