use border radius to make the pseudo elements round, and reposition them so the line goes straight through them down the middle

--- a/style.css
+++ b/style.css
@@ -130,4 +130,9 @@ aside {
   width: 0.5rem;
   aspect-ratio: 1;
   background: var(--clr-neutral-100);
+  border-radius: 50%;
+
+  /* by using transform, we can move the position of our pseudo elements on the horizontal plane. 
+  In our case, we want to move the elements to the left by an amount corresponding to half the width of the elements, therefore by -50% */
+  transform: translateX(-50%);
 }
