--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 
 .main-grid {
   display: grid;
-  grid-template-columns: 15rem auto;
+  grid-template-columns: 15rem 1fr;
   grid-auto-flow: dense;
   align-items: center;
   /* the first value set for min-height acts as a fallback in case the unit dvh is not supported by the browser */
