--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ aside {
   margin: 0;
 }
 
+.info {
+  font-size: var(--fs-500);
+}
+
 .job-experience {
   display: grid;
   grid-auto-flow: column;
