display elements of class "job-info" as flexbox. Distribute the content of the flexbox evently along the main axis. The name of the company should align to the right.

--- a/style.css
+++ b/style.css
@@ -126,6 +126,16 @@ aside {
   margin: 0;
 }
 
+.job-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.company {
+  text-align: end;
+}
+
 .icon-list {
   height: 100%;
   border-left: 1px solid var(--clr-primary-300);
