add a minimum height for h2 and spam elements insode of the job elements to ensure that the job descriptions align better horizontally

--- a/style.css
+++ b/style.css
@@ -126,6 +126,11 @@ aside {
   margin: 0;
 }
 
+.job > h2,
+span {
+  min-height: 4.2rem;
+}
+
 .job-info {
   display: flex;
   justify-content: space-between;
