--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 
 main {
   grid-column: 2;
+  width: calc(100vw - 15rem);
 }
 
 aside {
@@ -113,6 +114,7 @@ aside {
   display: grid;
   gap: 1rem;
   grid-auto-flow: column;
+  overflow-x: auto;
 }
 
 .job {
