so far the elements of class job have used the amount of space available horizontally, so as the screen gets wider, the distance between the individual elements grew. We can use justify-content on the parent element to avoid this.

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ aside {
 
 .job-experience {
   display: grid;
+  justify-content: start;
   gap: 1rem;
   grid-auto-flow: column;
   overflow-x: auto;
