with the use of a psuedo element mark which job is the current one. Add a padding and reposition the text relative to .job-experience.

--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@ aside {
   justify-content: start;
   gap: 1rem;
   grid-auto-flow: column;
+  position: relative;
   overflow-x: auto;
-  padding-bottom: 2rem;
+  padding: 2rem 0;
 }
 
 .job-experience::-webkit-scrollbar {
@@ -147,6 +148,14 @@ aside {
 
 .job * {
   margin: 0;
+}
+
+.job:first-child::before {
+  content: "Current role";
+  position: absolute;
+  color: var(--clr-accent-400);
+  top: 0;
+  left: 0;
 }
 
 .job > h2,
