specify height for .year and .job-info so that the content of .job align horizontally between one another

--- a/style.css
+++ b/style.css
@@ -270,6 +270,14 @@ span {
     display: none;
   }
 
+  .year {
+    min-height: 7.5vh;
+  }
+
+  .job-info {
+    min-height: 20.5vh;
+  }
+
   .job {
     width: calc(100vw - 2rem);
   }
