Instead of using a pseudo element which is impractical when creating a website of multple languages, use a p element inside of .job-experience to highlight the most resent role

--- a/style.css
+++ b/style.css
@@ -123,13 +123,22 @@ aside {
 }
 
 .job-experience {
+  display: flex;
+  flex-direction: column;
+
+  overflow-x: auto;
+  padding: 2rem 0;
+}
+
+.current-title {
+  color: var(--clr-accent-400);
+}
+
+.jobs {
   display: grid;
   justify-content: start;
   gap: 1rem;
   grid-auto-flow: column;
-  position: relative;
-  overflow-x: auto;
-  padding: 2rem 0;
 }
 
 .job-experience::-webkit-scrollbar {
@@ -149,7 +158,7 @@ aside {
   border-radius: 100vw;
 }
 
-.job-experience::after {
+.jobs::after {
   content: "";
   width: 50px;
   background: transparent;
@@ -164,14 +173,6 @@ aside {
 
 .job * {
   margin: 0;
-}
-
-.job:first-child::before {
-  content: "Current role";
-  position: absolute;
-  color: var(--clr-accent-400);
-  top: 0;
-  left: 0;
 }
 
 .job > h2,
